# Educational-Film-service

./: .gitmodules  README.md  pyproject.toml
api/content/: .env.exemple  .gitignore  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
api/content/src/api/cache/: redis.py
api/content/src/api/core/: utils.py
api/content/src/api/db/: abstract.py  elastic.py
api/content/src/api/endpoints/v1/: films.py  genres.py  persons.py
api/content/src/api/models/api/v1/: film.py  genre.py  person.py
api/content/src/api/models/db/: genre.py
api/content/src/api/services/: film.py  person.py
api/content/tests/: entrypoint.sh
api/content/tests/functional/: settings.py
api/content/tests/functional/fixtures/: connections.py
api/content/tests/functional/src/: test_film.py  test_person.py
api/content/tests/functional/utils/: wait_for_redis.py
api/content_delivery/: .dockerignore
api/content_delivery/src/api/: Dockerfile  entrypoint.sh  main.py
api/content_delivery/src/api/cache/: abstract.py
api/content_delivery/src/api/core/: config.py
api/content_delivery/src/api/models/: base.py
api/content_delivery/src/api/models/db/: film.py  person.py
api/content_delivery/src/api/services/: base.py  genre.py
api/content_delivery/src/api/validators/: films.py  pagination.py  search.py
api/content_delivery/src/core/configs/: elastic.py  redis.py
api/content_delivery/tests/: Dockerfile
api/content_delivery/tests/functional/: conftest.py
api/content_delivery/tests/functional/fixtures/: db_operations.py
api/content_delivery/tests/functional/src/: test_genre.py
api/content_delivery/tests/functional/testdata/: base_data.py  es_mapping.py  films_data.py  genres_data.py  persons_data.py
api/content_delivery/tests/functional/utils/: wait_for_es.py
